force-app/main/default/objects/ss_offer_info__c/ss_offer_info__c.object-meta.xml
<CustomObject>
    <description>ワンプラの申込が発生後、9時～19時の間、30分に1回更新</description>
    <label>ワンプライス車両　申込管理</label>
    <nameField>
        <label>申込番号</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>