force-app/main/default/objects/ss_offer_info__c/fields/agency_rep__c.field-meta.xml
<CustomField>
    <fullName>agency_rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>代理代行担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>agency_rep_relation_one_price</relationshipName>
    <type>Lookup</type>
</CustomField>