force-app/main/default/objects/ss_offer_info__c/fields/boarding_cap__c.field-meta.xml
<CustomField>
    <fullName>boarding_cap__c</fullName>
    <label>乗車人数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>