force-app/main/default/objects/ss_offer_info__c/fields/body_type__c.field-meta.xml
<CustomField>
    <fullName>body_type__c</fullName>
    <label>ボディタイプ</label>
    <length>50</length>
    <type>Text</type>
</CustomField>