force-app/main/default/objects/ss_offer_info__c/fields/buyer_member_u_cname__c.field-meta.xml
<CustomField>
    <fullName>buyer_member_u_cname__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>売却先会員名</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>ワンプライス車両　申込管理 (売却先会員名)</relationshipLabel>
    <relationshipName>buyer_member_u_cname</relationshipName>
    <type>Lookup</type>
</CustomField>