force-app/main/default/objects/ss_offer_info__c/fields/cancel_datetime__c.field-meta.xml
<CustomField>
    <fullName>cancel_datetime__c</fullName>
    <label>キャンセル日時</label>
    <type>DateTime</type>
</CustomField>