force-app/main/default/objects/ss_offer_info__c/fields/cancel_request_start__c.field-meta.xml
<CustomField>
    <fullName>cancel_request_start__c</fullName>
    <label>キャンセル依頼申請日時</label>
    <type>DateTime</type>
</CustomField>