force-app/main/default/objects/ss_offer_info__c/fields/car_height__c.field-meta.xml
<CustomField>
    <fullName>car_height__c</fullName>
    <label>車両サイズ　高さ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>