force-app/main/default/objects/ss_offer_info__c/fields/car_name__c.field-meta.xml
<CustomField>
    <fullName>car_name__c</fullName>
    <label>モデル(車名）</label>
    <length>100</length>
    <type>Text</type>
</CustomField>