force-app/main/default/objects/ss_offer_info__c/fields/consumption_tax__c.field-meta.xml
<CustomField>
    <fullName>consumption_tax__c</fullName>
    <inlineHelpText>同車両に申込があった場合、最大の入札金額を表示</inlineHelpText>
    <label>消費税</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>