force-app/main/default/objects/ss_offer_info__c/fields/dis_vol__c.field-meta.xml
<CustomField>
    <fullName>dis_vol__c</fullName>
    <label>排気量</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>