force-app/main/default/objects/ss_offer_info__c/fields/door_num__c.field-meta.xml
<CustomField>
    <fullName>door_num__c</fullName>
    <label>ドア数</label>
    <length>50</length>
    <type>Text</type>
</CustomField>