force-app/main/default/objects/ss_offer_info__c/fields/drive_form__c.field-meta.xml
<CustomField>
    <fullName>drive_form__c</fullName>
    <label>駆動方式</label>
    <length>50</length>
    <type>Text</type>
</CustomField>