force-app/main/default/objects/ss_offer_info__c/fields/eval_pnt_cd__c.field-meta.xml
<CustomField>
    <fullName>eval_pnt_cd__c</fullName>
    <label>評価点</label>
    <length>50</length>
    <type>Text</type>
</CustomField>