force-app/main/default/objects/ss_offer_info__c/fields/exh_store_dmstc_addr__c.field-meta.xml
<CustomField>
    <fullName>exh_store_dmstc_addr__c</fullName>
    <label>出品元店舗情報(市区町村)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>