force-app/main/default/objects/ss_offer_info__c/fields/extr_color__c.field-meta.xml
<CustomField>
    <fullName>extr_color__c</fullName>
    <label>外装色</label>
    <length>50</length>
    <type>Text</type>
</CustomField>