force-app/main/default/objects/ss_offer_info__c/fields/first_reg_date__c.field-meta.xml
<CustomField>
    <fullName>first_reg_date__c</fullName>
    <label>初度登録年月</label>
    <length>10</length>
    <type>Text</type>
</CustomField>