force-app/main/default/objects/ss_offer_info__c/fields/form__c.field-meta.xml
<CustomField>
    <fullName>form__c</fullName>
    <label>型式</label>
    <length>50</length>
    <type>Text</type>
</CustomField>