force-app/main/default/objects/ss_offer_info__c/fields/fuel__c.field-meta.xml
<CustomField>
    <fullName>fuel__c</fullName>
    <label>燃料</label>
    <length>50</length>
    <type>Text</type>
</CustomField>