force-app/main/default/objects/ss_offer_info__c/fields/grade_name__c.field-meta.xml
<CustomField>
    <fullName>grade_name__c</fullName>
    <label>グレード</label>
    <length>100</length>
    <type>Text</type>
</CustomField>