force-app/main/default/objects/ss_offer_info__c/fields/hanbai_tanto_shain__c.field-meta.xml
<CustomField>
    <fullName>hanbai_tanto_shain__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>販売担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>hanbai_tanto_shain_relation_member</relationshipName>
    <type>Lookup</type>
</CustomField>