force-app/main/default/objects/ss_offer_info__c/fields/handle_pos__c.field-meta.xml
<CustomField>
    <fullName>handle_pos__c</fullName>
    <label>ハンドル位置</label>
    <length>50</length>
    <type>Text</type>
</CustomField>