force-app/main/default/objects/ss_offer_info__c/fields/lot_num__c.field-meta.xml
<CustomField>
    <fullName>lot_num__c</fullName>
    <label>ロット番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>