force-app/main/default/objects/ss_offer_info__c/fields/maker_name__c.field-meta.xml
<CustomField>
    <fullName>maker_name__c</fullName>
    <label>メーカー</label>
    <length>50</length>
    <type>Text</type>
</CustomField>