force-app/main/default/objects/ss_offer_info__c/fields/max_bit_price__c.field-meta.xml
<CustomField>
    <fullName>max_bit_price__c</fullName>
    <inlineHelpText>同車両に申込があった場合、最大の入札金額を表示</inlineHelpText>
    <label>この車両の最大申込金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>