force-app/main/default/objects/ss_offer_info__c/fields/mileage__c.field-meta.xml
<CustomField>
    <fullName>mileage__c</fullName>
    <label>走行距離</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>