force-app/main/default/objects/ss_offer_info__c/fields/number_of_bit__c.field-meta.xml
<CustomField>
    <fullName>number_of_bit__c</fullName>
    <label>同車両の申込件数</label>
    <length>50</length>
    <type>Text</type>
</CustomField>