force-app/main/default/objects/ss_offer_info__c/fields/offer_fee__c.field-meta.xml
<CustomField>
    <fullName>offer_fee__c</fullName>
    <inlineHelpText>同車両に申込があった場合、最大の入札金額を表示</inlineHelpText>
    <label>申込手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>