force-app/main/default/objects/ss_offer_info__c/fields/offer_member_name__c.field-meta.xml
<CustomField>
    <fullName>offer_member_name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>申込会員名</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>ワンプライス車両　申込管理_申込会員名</relationshipLabel>
    <relationshipName>offer_member_name</relationshipName>
    <type>Lookup</type>
</CustomField>