force-app/main/default/objects/ss_offer_info__c/fields/offer_member_u_member_id__c.field-meta.xml
<CustomField>
    <fullName>offer_member_u_member_id__c</fullName>
    <label>申込会員ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>