force-app/main/default/objects/ss_offer_info__c/fields/offer_status__c.field-meta.xml
<CustomField>
    <fullName>offer_status__c</fullName>
    <label>申込状況</label>
    <length>50</length>
    <type>Text</type>
</CustomField>