force-app/main/default/objects/ss_offer_info__c/fields/offer_time__c.field-meta.xml
<CustomField>
    <fullName>offer_time__c</fullName>
    <label>申込日時</label>
    <type>DateTime</type>
</CustomField>