force-app/main/default/objects/ss_offer_info__c/fields/oldest_offer_time__c.field-meta.xml
<CustomField>
    <fullName>oldest_offer_time__c</fullName>
    <label>会員の初回申込日時</label>
    <type>DateTime</type>
</CustomField>