force-app/main/default/objects/ss_offer_info__c/fields/platform_num__c.field-meta.xml
<CustomField>
    <fullName>platform_num__c</fullName>
    <label>車台番号</label>
    <length>40</length>
    <type>Text</type>
</CustomField>