force-app/main/default/objects/ss_offer_info__c/fields/ss_kanri_num__c.field-meta.xml
<CustomField>
    <fullName>ss_kanri_num__c</fullName>
    <label>共有在庫管理番号</label>
    <length>20</length>
    <type>Text</type>
</CustomField>