force-app/main/default/objects/ss_offer_info__c/fields/ss_offer_info_seq__c.field-meta.xml
<CustomField>
    <fullName>ss_offer_info_seq__c</fullName>
    <externalId>true</externalId>
    <label>ss_offer_info_seq</label>
    <length>80</length>
    <type>Text</type>
</CustomField>