force-app/main/default/objects/ss_offer_info__c/fields/ss_offer_memo__c.field-meta.xml
<CustomField>
    <fullName>ss_offer_memo__c</fullName>
    <label>ワンプライスメモ(記載可)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>