force-app/main/default/objects/ss_offer_info__c/fields/total_payment__c.field-meta.xml
<CustomField>
    <fullName>total_payment__c</fullName>
    <inlineHelpText>同車両に申込があった場合、最大の入札金額を表示</inlineHelpText>
    <label>合計金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>