force-app/main/default/objects/ss_offer_info__c/fields/transmission__c.field-meta.xml
<CustomField>
    <fullName>transmission__c</fullName>
    <label>トランスミッション</label>
    <length>50</length>
    <type>Text</type>
</CustomField>