force-app/main/default/objects/ss_offer_info__c/fields/usd_wholesale_price__c.field-meta.xml
<CustomField>
    <fullName>usd_wholesale_price__c</fullName>
    <inlineHelpText>同車両に申込があった場合、最大の入札金額を表示</inlineHelpText>
    <label>申込時点業販価格（ドル）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>