force-app/main/default/objects/ss_offer_info__c/fields/Volume_M3__c.field-meta.xml
<CustomField>
    <fullName>Volume_M3__c</fullName>
    <formula>ROUND( ( car_length__c * car_width__c * car_height__c ) / 1000000 , 3 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>データによっては高さ、長さ、幅、いずれかのデータが空白または0の場合があります。
必ず元データを確認の上、使用してください。</inlineHelpText>
    <label>Volume (M3)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>