force-app/main/default/objects/ss_offer_info__c/fields/wholesale_price__c.field-meta.xml
<CustomField>
    <fullName>wholesale_price__c</fullName>
    <label>業販価格</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>