force-app/main/default/objects/ss_offer_info__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ss_kanri_num__c</columns>
    <columns>maker_name__c</columns>
    <columns>car_name__c</columns>
    <columns>offer_price__c</columns>
    <columns>offer_time__c</columns>
    <columns>offer_status__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>