force-app/main/default/objects/ss_offer_info__c/listViews/not_finish.listView-meta.xml
<ListView>
    <fullName>not_finish</fullName>
    <columns>NAME</columns>
    <columns>ss_kanri_num__c</columns>
    <columns>maker_name__c</columns>
    <columns>car_name__c</columns>
    <columns>oldest_offer_time__c</columns>
    <columns>offer_member_name__c</columns>
    <columns>offer_price__c</columns>
    <columns>usd_offer_price__c</columns>
    <columns>hanbai_tanto_shain__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>offer_status__c</field>
        <operation>equals</operation>
        <value>申込中</value>
    </filters>
    <label>未完了依頼</label>
</ListView>